@@ -800,7 +800,9 @@ main(int argc, char *argv[])
 	    }
 #endif
 		if (!options.username) {
-			if (options.batch) {
+			if (options.info) {
+				options.username = "";
+			} else if (options.batch) {
 				printLog(stderr, "Error: no username specified.\n");
 				options.usage |= USAGE_SUMMARY;
 			} else if (!options.usage &&
@@ -809,7 +811,8 @@ main(int argc, char *argv[])
 			}
 		}
 		if (!options.password) {
-			if (options.batch) {
+			if (options.info) {
+			} else if (options.batch) {
 				printLog(stderr, "Error: no password specified.\n");
 				options.usage |= USAGE_SUMMARY;
 			} else if (!options.usage &&
