@@ -1,6 +1,8 @@
 2006-11-04
 	* Fix bug 1579311 (and a million others), eBay changed the bid history
 	  page again.
+	* Implemented feature request 1587259, handling -i without username
+	  or password.
 
 2006-09-05
 	* Fix for dutch auction parsing?
